# catk

./: .gitignore  LICENSE  README.md  clean.csv  duplicates.csv  invalid_rows.csv  make_icon.py  pyproject.toml  requirements.txt
examples/report_demo/: sales_2025-08-01.csv  sales_2025-08-02.csv
examples/sales/: project1.csv
release/catk-0.1.0-win64/: CHANGELOG.md  LICENSE  QUICKSTART.txt  README.md
release/catk-0.1.0-win64/configs/: scrape.yml
release/catk-0.1.0-win64/examples/: sample.html
release/catk-0.1.0-win64/examples/sales/: sales_2025-08-03.csv
src/catk/: __main__.py  clean.py  cli.py  core.py  dedup.py  io.py
src/catk/resources/: version_info.txt
src/catk/utils/: paths.py
tests/: test_clean_row.py  test_dedup.py
